# mail

./: db.sqlite3  pyproject.toml
mail/migrations/: 0001_initial.py
mail/static/mail/: inbox.js  password_view_toggle.js  styles.css
mail/templates/mail/: inbox.html  layout.html  login.html  register.html
project3/: settings.py
